--- a/polybar/.config/polybar/forest/config.ini
+++ b/polybar/.config/polybar/forest/config.ini
@@ -138,9 +138,9 @@ font-1 = "waffle:size=10;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher sep workspaces sep filesystem
-modules-center = sep date
-modules-right = color-switch sep battery network sep volume brightness sep sysmenu
+modules-left = launcher sep workspaces sep filesystem 
+modules-center = sep date  color-switch sep
+modules-right =  sep battery network volume
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
