--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -652,4 +652,4 @@ bindsym $mod+shift+return exec --no-startup-id  $HOME/.config/polybar/network.sh
  # Hides vertical and horizontal borders when there's only one window.
  hide_edge_borders both
 
-exec --no-startup-id  nitrogen --set-scaled ~/wall.png
+exec --no-startup-id  nitrogen --set-scaled ~/Pictures/evil.png
