--- a/polybar/.config/polybar/forest/config.ini
+++ b/polybar/.config/polybar/forest/config.ini
@@ -61,7 +61,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 25
+height = 30
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -85,8 +85,8 @@ foreground = ${color.foreground}
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
-radius-top = 1.0
-radius-bottom = 1.0
+radius-top = 0.0
+radius-bottom = 0.0
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
@@ -138,9 +138,9 @@ font-1 = "waffle:size=10;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher sep workspaces sep filesystem 
-modules-center = sep date  color-switch sep
-modules-right =  sep battery network volume
+modules-left = launcher sep workspaces sep filesystem
+modules-center = sep date
+modules-right = color-switch sep battery network sep volume brightness sep sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
