--- a/polybar/.config/polybar/forest/config.ini
+++ b/polybar/.config/polybar/forest/config.ini
@@ -61,7 +61,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 30
+height = 25
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -85,8 +85,8 @@ foreground = ${color.foreground}
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
-radius-top = 0.0
-radius-bottom = 0.0
+radius-top = 1.0
+radius-bottom = 3.0
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
@@ -112,7 +112,7 @@ border-bottom-color = ${color.foreground}
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 2
+padding = 5
 
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
@@ -140,7 +140,7 @@ font-1 = "waffle:size=10;3"
 
 modules-left = launcher sep workspaces sep filesystem
 modules-center = sep date
-modules-right = color-switch sep battery network sep volume brightness sep sysmenu
+modules-right = color-switch sep battery sep network sep volume brightness sep sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
