--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,35 +1,45 @@
 # vim:ft=kitty
-## name: Dracula
-## author: Keegan Carruthers-Smith
-## license: MIT
-## upstream: https://raw.githubusercontent.com/dracula/kitty/master/dracula.conf
 
-foreground            #f8f8f2
-background            #282a36
-selection_foreground  #ffffff
-selection_background  #44475a
-url_color #8be9fd
-color0  #21222c
-color8  #6272a4
-color1  #ff5555
-color9  #ff6e6e
-color2  #50fa7b
-color10 #69ff94
-color3  #f1fa8c
-color11 #ffffa5
-color4  #bd93f9
-color12 #d6acff
-color5  #ff79c6
-color13 #ff92df
-color6  #8be9fd
-color14 #a4ffff
-color7  #f8f8f2
+## name: Sakura Night
+## license: MIT
+## author: PandaCatPlayz
+## upstream: https://pandacatplayz.github.io/kitty-themes/Sakura_Night.conf
+## blurb: A custom kitty dark theme loosely using the Endesga 32 palette
+
+background            #181425
+foreground            #F06292
+cursor                #F06292
+selection_background  #F06292
+
+#: black
+color0 #181425
+color8 #262b44
+
+#: red
+color1 #e43b44
+color9 #ff0044
+
+#: green
+color2  #3e8948
+color10 #63c74d
+
+#: yellow
+color3  #feae34
+color11 #fee761
+
+#: blue
+color4  #124e89
+color12 #0099db
+
+#: magenta
+color5  #b55088
+color13 #F06292
+
+#: cyan
+color6  #008080
+color14 #66b2b2
+
+#: white
+color7  #c0cbdc
 color15 #ffffff
-cursor            #f8f8f2
-cursor_text_color background
-active_tab_foreground   #282a36
-active_tab_background   #f8f8f2
-inactive_tab_foreground #282a36
-inactive_tab_background #6272a4
-mark1_foreground #282a36
-mark1_background #ff5555
+selection_foreground #f7f7f7
