--- a/kitty/.config/kitty/kitty-themes/themes/Floraverse.conf
+++ b/kitty/.config/kitty/kitty-themes/themes/Floraverse.conf
@@ -1,22 +1,52 @@
-background            #0e0c15
-foreground            #dbd0b9
-cursor                #bbbbbb
-selection_background  #f3e0b8
-color0                #08002e
-color8                #331d4c
-color1                #64002c
-color9                #cf2062
-color2                #5d731a
-color10               #b3ce58
-color3                #cd751c
-color11               #fac357
-color4                #1d6da1
-color12               #40a4cf
-color5                #b7077e
-color13               #f02aae
-color6                #42a38c
-color14               #62caa8
-color7                #f3e0b8
-color15               #fff5db
-selection_foreground #0e0c15
+# gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
+# Modified by Axenide, https://zaap.bio/Axenide
+# This work is licensed under the terms of the MIT license.
+# For a copy, see https://opensource.org/licenses/MIT.
 
+background_opacity 1.00
+
+background  #000000
+foreground  #ebdbb2
+
+cursor                #928374
+
+selection_foreground  #928374
+selection_background  #3c3836
+
+color0  #1d1d1d
+color8  #928374
+
+# red
+color1                #cc241d
+# light red
+color9                #fb4934
+
+# green
+color2                #98971a
+# light green
+color10               #b8bb26
+
+# yellow
+color3                #d79921
+# light yellow
+color11               #fabd2d
+
+# blue
+color4                #458588
+# light blue
+color12               #83a598
+
+# magenta
+color5                #b16286
+# light magenta
+color13               #d3869b
+
+# cyan
+color6                #689d6a
+# lighy cyan
+color14               #8ec07c
+
+# light gray
+color7                #a89984
+# dark gray
+color15               #928374
