--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,45 +1,21 @@
-# vim:ft=kitty
-
-## name: Sakura Night
-## license: MIT
-## author: PandaCatPlayz
-## upstream: https://pandacatplayz.github.io/kitty-themes/Sakura_Night.conf
-## blurb: A custom kitty dark theme loosely using the Endesga 32 palette
-
-background            #181425
-foreground            #F06292
-cursor                #F06292
-selection_background  #F06292
-
-#: black
-color0 #181425
-color8 #262b44
-
-#: red
-color1 #e43b44
-color9 #ff0044
-
-#: green
-color2  #3e8948
-color10 #63c74d
-
-#: yellow
-color3  #feae34
-color11 #fee761
-
-#: blue
-color4  #124e89
-color12 #0099db
-
-#: magenta
-color5  #b55088
-color13 #F06292
-
-#: cyan
-color6  #008080
-color14 #66b2b2
-
-#: white
-color7  #c0cbdc
-color15 #ffffff
-selection_foreground #f7f7f7
+background            #1f1626
+foreground            #d9faff
+cursor                #dd00ff
+selection_background  #002731
+color0                #000506
+color8                #009cc9
+color1                #d94085
+color9                #da6bab
+color2                #2ab250
+color10               #f4dba5
+color3                #ffd06e
+color11               #eac066
+color4                #873bdb
+color12               #2f8bb9
+color5                #ececec
+color13               #ae636b
+color6                #c1b8b6
+color14               #ff919d
+color7                #fff8dd
+color15               #e4838d
+selection_foreground #1f1626
