--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,21 +1,21 @@
-background            #1f1626
-foreground            #d9faff
-cursor                #dd00ff
-selection_background  #002731
-color0                #000506
-color8                #009cc9
-color1                #d94085
-color9                #da6bab
-color2                #2ab250
-color10               #f4dba5
-color3                #ffd06e
-color11               #eac066
-color4                #873bdb
-color12               #2f8bb9
-color5                #ececec
-color13               #ae636b
-color6                #c1b8b6
-color14               #ff919d
-color7                #fff8dd
-color15               #e4838d
-selection_foreground #1f1626
+background            #202020
+foreground            #d0d0d0
+cursor                #d0d0d0
+selection_background  #eecb8b
+color0                #151515
+color8                #505050
+color1                #ac4142
+color9                #ac4142
+color2                #7e8d50
+color10               #7e8d50
+color3                #e5b566
+color11               #e5b566
+color4                #6c99ba
+color12               #6c99ba
+color5                #9e4e85
+color13               #9e4e85
+color6                #7dd5cf
+color14               #7dd5cf
+color7                #d0d0d0
+color15               #f5f5f5
+selection_foreground  #232323
