--- a/polybar/.config/polybar/forest/user_modules.ini
+++ b/polybar/.config/polybar/forest/user_modules.ini
@@ -61,6 +61,10 @@ click-right = exo-open --launch TerminalEmulator &
 
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+[module/mynetwork]
+type = custom/text
+click-left = ~/mydotfiles/rofi-network-manager/rofi-network-manager.sh &
+content = 
 
 [module/launcher]
 type = custom/text
@@ -242,9 +246,5 @@ label-close-padding = 1
 ;label-separator = " | "
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-[module/mynetwork]
-type = custom/script
-content = 
-left-click = kitty -e nmtui
 
 
