--- a/polybar/.config/polybar/forest/config.ini
+++ b/polybar/.config/polybar/forest/config.ini
@@ -145,7 +145,7 @@ font-2 = "feather:size=12;3"
 
 modules-left = launcher sep workspaces sep filesystem
 modules-center = sep date sep
-modules-right = color-switch battery_bar network sep volume brightness sep sysmenu
+modules-right = color-switch battery_bar mynetwork network sep volume brightness sep sysmenu
 
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
