--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -1,10 +1,10 @@
 backend = "glx";
 vsync = true;
-refresh-rate = 0;
 
 # Show desktop wallpaper on transparent windows
 # transparent-clipping = true;
 
+inactive-dim = 0.2;
 # GLX backend (NVIDIA)
 glx-copy-from-front = false;
 glx-no-stencil = true;
@@ -74,8 +74,8 @@ shadow-exclude = [
 # Fix background flashing https://github.com/yshui/picom/issues/16#issuecomment-792739119
 fading = true
 fade-delta = 50
-fade-in-step = 1
-fade-out-step = 1
+fade-in-step = 20
+fade-out-step = 20
 fade-exclude = [
   "fullscreen",
   "name ~= 'polybar'",
@@ -96,17 +96,17 @@ fade-exclude = [
   "window_type = 'utility'",
 ];
 
-blur-method = "dual_kawase";
-blur-strength = 15; # 1 - 20
-blur-background-exclude = [
+blur-method = "gaussian";
+blur-strength = 1; # 1 - 20
+#blur-background-exclude = [
   # Disable blur on everything except rofi and polybar
-  "class_g != 'Polybar' && class_g != 'Rofi'",
+#  "class_g != 'Polybar' && class_g != 'Rofi' && class_g != 'kitty' ",
 
-  "window_type = 'dnd'",
-  "window_type = 'utility' && class_g = 'Firefox'",
-  "window_type = 'normal' && class_g != 'Rofi'",
+ #"window_type = 'dnd'",
+  #"window_type = 'utility' && class_g = 'Firefox'",
+ # "window_type = 'normal' && class_g != 'Rofi'",
 
   # Zoom related
-  "name = 'as_toolbar'",
-];
+ # "name = 'as_toolbar'",
+#];
 
