--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,7 @@
 
 
 # BEGIN_KITTY_THEME
-# 1984 Dark
-#include current-theme.conf
+# Dark Pride
+background_opacity 0.8
+include current-theme.conf
 # END_KITTY_THEME
