Migrate to hyprland - add config for fish - waybar and remove old config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,6 +2,8 @@
 
 # BEGIN_KITTY_THEME
 # Dark Pride
-background_opacity 0.8
-include current-theme.conf
+include  Catppuccin-Mocha.conf
 # END_KITTY_THEME
+background_opacity 0.1
+font_size 14.0
+
