--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -182,6 +182,8 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Cycle through existing workspaces with tab
 bindr = $mainMod, tab, workspace, e+1 
+bindr = $mainMod SHIFT, tab, workspace, e-1 
+
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
