--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -14,15 +14,9 @@ misc {
 disable_hyprland_logo = true
 disable_splash_rendering = true
 }
-# See https://wiki.hyprland.or/Configuring/Monitors/
-monitor=,highres,auto,1
-# change monitor to high resolution, the last argument is the scale factor
+# See https://wiki.hyprland.org/Configuring/Monitors/
+monitor=eDP-1,highres,auto,1
 
-# unscale XWayland
-
-# toolkit-specific scale
-env = GDK_SCALE,1
-env = XCURSOR_SIZE,25
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -33,6 +27,7 @@ env = XCURSOR_SIZE,25
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
+env = XCURSOR_SIZE,20
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -197,9 +192,9 @@ bindm = $mainMod, mouse:273, resizewindow
 #clipboard 
 bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -theme purple | cliphist decode | wl-copy
 
-#increase scaling 
-bind = $mainMod ALT, up,exec, hyprctl keyword monitor ",highres,auto,1.2"
-bind = $mainMod ALT, down,exec,hyprctl keyword monitor ",highres,auto,1"
+#adjust Scaling
+bind = $mainMod ALT, up, exec, hyprctl keyword monitor "eDP-1,highres,auto,1.2"
+bind = $mainMod ALT, down, exec, hyprctl keyword monitor "eDP-1,highres,auto,1"
 
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=nm-applet --indicator
